# pdf-to-markdown

./: .gitignore  README.md  convert_ai.sh  convert_large.py  main.py  pyproject.toml  requirements.txt  run.sh  server.py  split_pdf.py  watch.py
docs/: setup.md
scripts/: convert_ai.sh  run.sh
src/: config.py  convert_large.py  converter.py  logger.py  postprocess.py  report.py  server.py  split_pdf.py  watch.py
