[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "loony-pdf2md"
version = "1.0.0"
description = "Convert PDF files to Markdown using Marker"
requires-python = ">=3.12"
dependencies = [
    "marker-pdf[full]",
    "pypdfium2",
    "fastapi",
    "uvicorn[standard]",
    "watchdog",
    "psutil",
    "python-multipart",
    "tqdm",
]

[project.scripts]
pdf2md        = "main:main"
pdf2md-large  = "src.convert_large:main"
pdf2md-split  = "src.split_pdf:main"
pdf2md-server = "src.server:main"
pdf2md-watch  = "src.watch:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
